<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.maxedapps.activities.ListViewActivity" >

    <item android:id="@+id/action_view"
        android:title="@string/action_view"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:actionProviderClass="android.widget.ShareActionProvider"/>
</menu>
