<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.maxedapps.activities.ListViewActivity" >

    <item android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_edit"/>
    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_discard"/>
    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_share"/>
</menu>
